--- a/styles.css
+++ b/styles.css
@@ -55,3 +55,16 @@ main {
     padding: 0 1.5rem;
     text-align: center;
 }
+.weather {
+    height: 15rem;
+    width: 30rem;
+    margin: 1rem auto;
+    padding: 1rem;
+    border: 0.5rem solid #4267b2;
+    border-radius: 2rem;
+}
+.weather-conditions {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
