--- a/styles.css
+++ b/styles.css
@@ -68,3 +68,21 @@ main {
     flex-direction: column;
     align-items: center;
 }
+h1 {
+    font-size: 4rem;
+    padding: 2rem;
+}
+h2 {
+    padding: 1rem;
+}
+h3 {
+    padding-bottom: 1rem;
+}
+.profile-photo {
+    width: 25rem;
+    height: 25rem;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 0.5rem solid transparent;
+    box-shadow: 0 0 0.5rem 0.5rem #4267b2;
+}
