--- a/styles.css
+++ b/styles.css
@@ -86,3 +86,21 @@ h3 {
     border: 0.5rem solid transparent;
     box-shadow: 0 0 0.5rem 0.5rem #4267b2;
 }
+.toggle-background {
+    display: block;
+    margin: 2rem auto;
+    padding: 1rem;
+    font-size: 2rem;
+    color: #ffff;
+    background: #4267b2;
+    border: none;
+    border-radius: 1rem;
+    outline: none;
+}
+.toggle-background:focus {
+    box-shadow: 0 0 0.5rem 0.2rem #bc243c;
+}
+.toggle-background:hover {
+    background: #29487d;
+    cursor: pointer;
+}
